Add apt_cacher_ng_proxy config

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,6 @@
 apt_cacher_ng_port: 3142
 apt_cacher_ng_cache_dir: /var/cache/apt-cacher-ng
 apt_cacher_ng_setup_ufw: true
+apt_cacher_ng_setup_proxy: true
+apt_cacher_ng_proxy_ip: 10.0.0.1
+apt_cacher_ng_proxy_port: 3128
